# adilsm

./: .gitignore  Makefile  README.md  ilsm.py  setup.cfg  setup.py  version.txt
.github/workflows/: push-pypi.yml
adilsm/: adilsm.py  adilsm_bck.py
adilsm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
example/: abis_915.csv  abis_biomed.ipynb  uci_digits_biomed.ipynb
examples/: abis_aih.ipynb  abis_all.ipynb  abis_biomed.ipynb  abis_gfa.ipynb  abis_gfa_screeplot.ipynb  abis_ism.ipynb  abis_mofa.ipynb  abis_mofa_screeplot.ipynb  abis_mvmds_screeplot.ipynb  easi3_and_lab.ipynb  easi3_lab.ipynb  federated_nmf.ipynb  federated_nmf_ilsm.ipynb  federated_nmf_ism.ipynb  gfa.py  mowgli_ilsm.ipynb  prokaryotic_ilsm.ipynb  reuters_ilsm.ipynb  simulation_aih.ipynb  simulation_biomed.ipynb  simulation_ism.ipynb  uci_digits_aih.ipynb  uci_digits_all.ipynb  uci_digits_biomed.ipynb  uci_digits_biomed_bck.ipynb  uci_digits_gfa.ipynb  uci_digits_gfa_screeplot.ipynb  uci_digits_ism.ipynb  uci_digits_mofa.ipynb  uci_digits_mofa_screeplot.ipynb  uci_digits_mvmds_screeplot.ipynb  w_ism.csv  w_ism.jmp  w_nmf.csv
examples.bck/: abis_915.csv  abis_all.ipynb  abis_biomed.ipynb  abis_gfa screeplot.ipynb  abis_gfa.ipynb  abis_mofa_screeplot.ipynb  easi3.ipynb  simulation_biomed.ipynb  uci_digits_all.ipynb  uci_digits_biomed.ipynb  uci_digits_gfa.ipynb  uci_digits_mvmds_screeplot.ipynb
examples/data/: ALL-AML Brunet.csv
examples/reproducibily/: abis_all.ipynb  abis_gfa.ipynb  abis_gfa_screeplot.ipynb  abis_ism.ipynb  abis_mofa.ipynb  abis_mofa_screeplot.ipynb  ism_utils.py  (+11 more)
(+5 files in other folders)
