[metadata]
name = adilsm
description = Integrated Longitudinal Multi Source Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Advestis/adilsm
author = Paul Fogel
author_email = pfogel@advestis.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/Advestis/adilsm/issues
    Documentation = https://advestis.github.io/adilsm
    Source Code = https://github.com/Advestis/adilsm/

[options]
packages = find:
install_requires =
    adnmtf
python_requires = >=3.9
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = adilsm/_version.py
versionfile_build = adilsm/_version.py
tag_prefix = v
parentdir_prefix = adilsm-
